--- a/_modules/pybgen/pybgen.html
+++ b/_modules/pybgen/pybgen.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>pybgen.pybgen &#8212; pybgen 0.5.0 documentation</title>
+    <title>pybgen.pybgen &#8212; pybgen 0.6.0 documentation</title>
     <link rel="stylesheet" href="../../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <script type="text/javascript" src="../../_static/documentation_options.js"></script>
@@ -247,8 +247,8 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">_bgen</span><span class="o">.</span><span class="n">close</span><span class="p">()</span>
 
         <span class="c1"># Closing the index file (if in read mode)</span>
-        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">_mode</span> <span class="o">==</span> <span class="s2">&quot;r&quot;</span> <span class="ow">and</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">_skip_index</span><span class="p">:</span></div>
-            <span class="bp">self</span><span class="o">.</span><span class="n">_bgen_db</span><span class="o">.</span><span class="n">close</span><span class="p">()</span>
+        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">_mode</span> <span class="o">==</span> <span class="s2">&quot;r&quot;</span> <span class="ow">and</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">_skip_index</span><span class="p">:</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">_bgen_db</span><span class="o">.</span><span class="n">close</span><span class="p">()</span></div>
 
     <span class="nd">@property</span>
     <span class="k">def</span> <span class="nf">nb_variants</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
@@ -299,8 +299,8 @@
 
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">_bgen</span><span class="o">.</span><span class="n">tell</span><span class="p">()</span> <span class="o">&gt;</span> <span class="bp">self</span><span class="o">.</span><span class="n">_last_variant_block</span><span class="p">:</span>
             <span class="k">raise</span> <span class="ne">StopIteration</span><span class="p">()</span>
-</div>
-        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_read_current_variant</span><span class="p">()</span>
+
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_read_current_variant</span><span class="p">()</span></div>
 
 <div class="viewcode-block" id="PyBGEN.iter_variants"><a class="viewcode-back" href="../../pybgen.html#pybgen.PyBGEN.iter_variants">[docs]</a>    <span class="k">def</span> <span class="nf">iter_variants</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Iterates over variants from the beginning of the BGEN file.</span>
@@ -315,8 +315,8 @@
         <span class="c1"># Seeking back to the first variant block</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_bgen</span><span class="o">.</span><span class="n">seek</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_first_variant_block</span><span class="p">)</span>
 
-        <span class="c1"># Return itself (the generator)</span></div>
-        <span class="k">return</span> <span class="bp">self</span>
+        <span class="c1"># Return itself (the generator)</span>
+        <span class="k">return</span> <span class="bp">self</span></div>
 
 <div class="viewcode-block" id="PyBGEN.iter_variants_in_region"><a class="viewcode-back" href="../../pybgen.html#pybgen.PyBGEN.iter_variants_in_region">[docs]</a>    <span class="k">def</span> <span class="nf">iter_variants_in_region</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">chrom</span><span class="p">,</span> <span class="n">start</span><span class="p">,</span> <span class="n">end</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Iterates over variants in a specific region.</span>
@@ -340,8 +340,46 @@
 
         <span class="c1"># Fetching seek positions, we return the variant</span>
         <span class="k">for</span> <span class="n">seek_pos</span> <span class="ow">in</span> <span class="n">seek_positions</span><span class="p">:</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">_bgen</span><span class="o">.</span><span class="n">seek</span><span class="p">(</span><span class="n">seek_pos</span><span class="p">)</span></div>
-            <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">_read_current_variant</span><span class="p">()</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">_bgen</span><span class="o">.</span><span class="n">seek</span><span class="p">(</span><span class="n">seek_pos</span><span class="p">)</span>
+            <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">_read_current_variant</span><span class="p">()</span></div>
+
+<div class="viewcode-block" id="PyBGEN.get_specific_variant"><a class="viewcode-back" href="../../pybgen.html#pybgen.PyBGEN.get_specific_variant">[docs]</a>    <span class="k">def</span> <span class="nf">get_specific_variant</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">chrom</span><span class="p">,</span> <span class="n">pos</span><span class="p">,</span> <span class="n">ref</span><span class="p">,</span> <span class="n">alt</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;Get specific variant with allele lookup</span>
+
+<span class="sd">        Args:</span>
+<span class="sd">            chrom (str): The name of the chromosome.</span>
+<span class="sd">            pos (int): The starting position of the region.</span>
+<span class="sd">            ref (str): The reference allele.</span>
+<span class="sd">            alt (str): The alternative allele.</span>
+
+<span class="sd">        Returns:</span>
+<span class="sd">            list: A list containing all the value for a given variant. The list</span>
+<span class="sd">            has more than one item if there are duplicated variants.</span>
+
+<span class="sd">        &quot;&quot;&quot;</span>
+        <span class="c1"># Getting the region from the index file</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_bgen_index</span><span class="o">.</span><span class="n">execute</span><span class="p">(</span>
+            <span class="s2">&quot;SELECT file_start_position &quot;</span>
+            <span class="s2">&quot;FROM Variant &quot;</span>
+            <span class="s2">&quot;WHERE chromosome = ? AND position = ? AND allele1 = ? AND &quot;</span>
+            <span class="s2">&quot;      allele2 = ?&quot;</span><span class="p">,</span>
+            <span class="p">(</span><span class="n">chrom</span><span class="p">,</span> <span class="n">pos</span><span class="p">,</span> <span class="n">ref</span><span class="p">,</span> <span class="n">alt</span><span class="p">),</span>
+        <span class="p">)</span>
+
+        <span class="c1"># Fetching all the seek positions</span>
+        <span class="n">seek_positions</span> <span class="o">=</span> <span class="p">[</span><span class="n">_</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="k">for</span> <span class="n">_</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">_bgen_index</span><span class="o">.</span><span class="n">fetchall</span><span class="p">()]</span>
+
+        <span class="c1"># Fetching seek positions, we return the variant</span>
+        <span class="n">results</span> <span class="o">=</span> <span class="p">[]</span>
+        <span class="k">for</span> <span class="n">seek_pos</span> <span class="ow">in</span> <span class="n">seek_positions</span><span class="p">:</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">_bgen</span><span class="o">.</span><span class="n">seek</span><span class="p">(</span><span class="n">seek_pos</span><span class="p">)</span>
+            <span class="n">results</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_read_current_variant</span><span class="p">())</span>
+
+        <span class="k">if</span> <span class="ow">not</span> <span class="n">results</span><span class="p">:</span>
+            <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;</span><span class="si">{}</span><span class="s2">:</span><span class="si">{}</span><span class="s2"> </span><span class="si">{}</span><span class="s2">/</span><span class="si">{}</span><span class="s2">: variant not found&quot;</span>
+                             <span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">chrom</span><span class="p">,</span> <span class="n">pos</span><span class="p">,</span> <span class="n">ref</span><span class="p">,</span> <span class="n">alt</span><span class="p">))</span>
+
+        <span class="k">return</span> <span class="n">results</span></div>
 
 <div class="viewcode-block" id="PyBGEN.iter_variant_info"><a class="viewcode-back" href="../../pybgen.html#pybgen.PyBGEN.iter_variant_info">[docs]</a>    <span class="k">def</span> <span class="nf">iter_variant_info</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Iterate over marker information.&quot;&quot;&quot;</span>
@@ -356,8 +394,8 @@
         <span class="n">results</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_bgen_index</span><span class="o">.</span><span class="n">fetchmany</span><span class="p">(</span><span class="n">array_size</span><span class="p">)</span>
         <span class="k">while</span> <span class="n">results</span><span class="p">:</span>
             <span class="k">for</span> <span class="n">chrom</span><span class="p">,</span> <span class="n">pos</span><span class="p">,</span> <span class="n">rsid</span><span class="p">,</span> <span class="n">a1</span><span class="p">,</span> <span class="n">a2</span> <span class="ow">in</span> <span class="n">results</span><span class="p">:</span>
-                <span class="k">yield</span> <span class="n">_Variant</span><span class="p">(</span><span class="n">rsid</span><span class="p">,</span> <span class="n">chrom</span><span class="p">,</span> <span class="n">pos</span><span class="p">,</span> <span class="n">a1</span><span class="p">,</span> <span class="n">a2</span><span class="p">)</span></div>
-            <span class="n">results</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_bgen_index</span><span class="o">.</span><span class="n">fetchmany</span><span class="p">(</span><span class="n">array_size</span><span class="p">)</span>
+                <span class="k">yield</span> <span class="n">_Variant</span><span class="p">(</span><span class="n">rsid</span><span class="p">,</span> <span class="n">chrom</span><span class="p">,</span> <span class="n">pos</span><span class="p">,</span> <span class="n">a1</span><span class="p">,</span> <span class="n">a2</span><span class="p">)</span>
+            <span class="n">results</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_bgen_index</span><span class="o">.</span><span class="n">fetchmany</span><span class="p">(</span><span class="n">array_size</span><span class="p">)</span></div>
 
     <span class="k">def</span> <span class="nf">_iter_seeks</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">seeks</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Iterate over seek positions.&quot;&quot;&quot;</span>
@@ -396,8 +434,8 @@
 
         <span class="k">if</span> <span class="ow">not</span> <span class="n">results</span><span class="p">:</span>
             <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;</span><span class="si">{}</span><span class="s2">: name not found&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">name</span><span class="p">))</span>
-</div>
-        <span class="k">return</span> <span class="n">results</span>
+
+        <span class="k">return</span> <span class="n">results</span></div>
 
     <span class="k">def</span> <span class="nf">_read_current_variant</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Reads the current variant.&quot;&quot;&quot;</span>
@@ -763,8 +801,8 @@
             <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;</span><span class="si">{}</span><span class="s2">: invalid index&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_bgen</span><span class="o">.</span><span class="n">name</span><span class="p">))</span>
 
     <span class="nd">@staticmethod</span>
-    <span class="k">def</span> <span class="nf">_no_decompress</span><span class="p">(</span><span class="n">data</span><span class="p">):</span></div>
-        <span class="k">return</span> <span class="n">data</span>
+    <span class="k">def</span> <span class="nf">_no_decompress</span><span class="p">(</span><span class="n">data</span><span class="p">):</span>
+        <span class="k">return</span> <span class="n">data</span></div>
 
 
 <span class="k">def</span> <span class="nf">_bits_to_int</span><span class="p">(</span><span class="n">bits</span><span class="p">):</span>
@@ -827,7 +865,7 @@
       &copy;2017, Louis-Philippe Lemieux Perreault.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 1.7.1</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 1.7.4</a>
       &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.10</a>
       
     </div>
