--- a/_modules/pybgen/parallel.html
+++ b/_modules/pybgen/parallel.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>pybgen.parallel &#8212; pybgen 0.5.0 documentation</title>
+    <title>pybgen.parallel &#8212; pybgen 0.6.0 documentation</title>
     <link rel="stylesheet" href="../../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <script type="text/javascript" src="../../_static/documentation_options.js"></script>
@@ -173,8 +173,8 @@
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">_seeks</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">_get_all_seeks</span><span class="p">()</span>
         <span class="n">seeks</span> <span class="o">=</span> <span class="p">[</span><span class="bp">self</span><span class="o">.</span><span class="n">_seeks</span><span class="p">[</span><span class="n">i</span><span class="p">::</span><span class="bp">self</span><span class="o">.</span><span class="n">cpus</span><span class="p">]</span> <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">cpus</span><span class="p">)]</span>
-</div>
-        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_parallel_iter_seeks</span><span class="p">(</span><span class="n">seeks</span><span class="p">)</span>
+
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_parallel_iter_seeks</span><span class="p">(</span><span class="n">seeks</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="ParallelPyBGEN.iter_variants_by_names"><a class="viewcode-back" href="../../pybgen.html#pybgen.ParallelPyBGEN.iter_variants_by_names">[docs]</a>    <span class="k">def</span> <span class="nf">iter_variants_by_names</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">names</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Iterates over variants using a list of names.</span>
@@ -185,8 +185,8 @@
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">seeks</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_get_seeks_for_names</span><span class="p">(</span><span class="n">names</span><span class="p">)</span>
         <span class="n">seeks</span> <span class="o">=</span> <span class="p">[</span><span class="n">seeks</span><span class="p">[</span><span class="n">i</span><span class="p">::</span><span class="bp">self</span><span class="o">.</span><span class="n">cpus</span><span class="p">]</span> <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">cpus</span><span class="p">)]</span>
-</div>
-        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_parallel_iter_seeks</span><span class="p">(</span><span class="n">seeks</span><span class="p">)</span>
+
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_parallel_iter_seeks</span><span class="p">(</span><span class="n">seeks</span><span class="p">)</span></div>
 
     <span class="k">def</span> <span class="nf">_get_all_seeks</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Gets the list of seeks.&quot;&quot;&quot;</span>
@@ -245,8 +245,8 @@
 
         <span class="k">finally</span><span class="p">:</span>
             <span class="c1"># Terminating the worker, whatever happened</span>
-            <span class="k">for</span> <span class="n">worker</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">_workers</span><span class="p">:</span></div>
-                <span class="n">worker</span><span class="o">.</span><span class="n">terminate</span><span class="p">()</span>
+            <span class="k">for</span> <span class="n">worker</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">_workers</span><span class="p">:</span>
+                <span class="n">worker</span><span class="o">.</span><span class="n">terminate</span><span class="p">()</span></div>
 </pre></div>
 
           </div>
@@ -258,7 +258,7 @@
       &copy;2017, Louis-Philippe Lemieux Perreault.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 1.7.1</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 1.7.4</a>
       &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.10</a>
       
     </div>
